{
  "version": 4,
  "terraform_version": "1.10.1",
  "serial": 3,
  "lineage": "6e5edf38-7256-cf53-fc72-95053fb0d7f0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-gke-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-5:707728974508:security-group/sg-0301ee7cebb9eb9a9",
            "description": "Security group for Bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0301ee7cebb9eb9a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.4.3.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "prod-bastion-gke-sg",
            "name_prefix": "",
            "owner_id": "707728974508",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-bastion-sg"
            },
            "tags_all": {
              "Name": "prod-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04805d733b4111e20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_bastion_to_eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Bastion host to access the EKS control plane on HTTPS (443)",
            "from_port": 443,
            "id": "sgrule-178364944",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f432b337ab376011",
            "security_group_rule_id": "sgr-03f8d5598860d0aa5",
            "self": false,
            "source_security_group_id": "sg-0301ee7cebb9eb9a9",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-gke-sg",
            "data.terraform_remote_state.vpc",
            "module.eks.aws_security_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-5:707728974508:security-group/sg-0f432b337ab376011",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0f432b337ab376011",
            "ingress": [],
            "name": "asseto-prod-eks-cluster-cluster-20250417062013763800000003",
            "name_prefix": "asseto-prod-eks-cluster-cluster-",
            "owner_id": "707728974508",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "asseto-prod-eks-cluster-cluster"
            },
            "tags_all": {
              "Name": "asseto-prod-eks-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-04805d733b4111e20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-5:707728974508:security-group/sg-039aa0a4151ba4dd9",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-039aa0a4151ba4dd9",
            "ingress": [],
            "name": "asseto-prod-eks-cluster-node-20250417062013765700000006",
            "name_prefix": "asseto-prod-eks-cluster-node-",
            "owner_id": "707728974508",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "asseto-prod-eks-cluster-node",
              "kubernetes.io/cluster/asseto-prod-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "asseto-prod-eks-cluster-node",
              "kubernetes.io/cluster/asseto-prod-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-04805d733b4111e20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1659887632",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f432b337ab376011",
            "security_group_rule_id": "sgr-038acb2ac0976bac6",
            "self": false,
            "source_security_group_id": "sg-039aa0a4151ba4dd9",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1108013924",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-039aa0a4151ba4dd9",
            "security_group_rule_id": "sgr-0f2f7b34b681c3e55",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-351642448",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-039aa0a4151ba4dd9",
            "security_group_rule_id": "sgr-095390f12985bebce",
            "self": false,
            "source_security_group_id": "sg-0f432b337ab376011",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-43124642",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-039aa0a4151ba4dd9",
            "security_group_rule_id": "sgr-0b900edc982534cc8",
            "self": false,
            "source_security_group_id": "sg-0f432b337ab376011",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-875536332",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-039aa0a4151ba4dd9",
            "security_group_rule_id": "sgr-0f384378afd195e91",
            "self": false,
            "source_security_group_id": "sg-0f432b337ab376011",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-661890027",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-039aa0a4151ba4dd9",
            "security_group_rule_id": "sgr-099c28f2a011ebce0",
            "self": false,
            "source_security_group_id": "sg-0f432b337ab376011",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1137872930",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-039aa0a4151ba4dd9",
            "security_group_rule_id": "sgr-052d1d641ace5fcc4",
            "self": false,
            "source_security_group_id": "sg-0f432b337ab376011",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1321542277",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-039aa0a4151ba4dd9",
            "security_group_rule_id": "sgr-0d56ece66a483b854",
            "self": false,
            "source_security_group_id": "sg-0f432b337ab376011",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1587048394",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-039aa0a4151ba4dd9",
            "security_group_rule_id": "sgr-0e97b672f7d325f54",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-333843921",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-039aa0a4151ba4dd9",
            "security_group_rule_id": "sgr-09cf0fca8a0e6c2ad",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1212568000",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-039aa0a4151ba4dd9",
            "security_group_rule_id": "sgr-0a60ed7faf4b90887",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}